--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
         container_name: skillboard-redis
         env_file: .config/redis/.env
         ports:
-            - "54400:6379"
+            - "54410:6379"
         command: >
             redis-server /etc/redis.conf
         volumes:
@@ -36,6 +36,7 @@ services:
             - "54420:3306"
         volumes:
             - skillboard-mysql:/var/lib/mysql
+            - ./.config/mysql/skillz.conf:/etc/mysql/skillz.conf
 volumes:
     skillboard-cache:
     skillboard-mongo:
