miniature  refactor of the services

--- a/.config/redis/tmpl_redis.conf
+++ b/.config/redis/tmpl_redis.conf
@@ -787,7 +787,7 @@ acllog-max-len 128
 # AUTH <password> as usually, or more explicitly with AUTH default <password>
 # if they follow the new protocol: both will work.
 #
-requirepass REPLACE_ME
+requirepass REPLACE_ME_REDIS_PASS
 
 # Command renaming (DEPRECATED).
 #
