--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,14 @@ version: "3.7"
 
 services:
     app:
-        image: ghcr.io/eveisesi/skillboard:v0.0.1
+        image: ghcr.io/eveisesi/skillboard/skillboard-api:0.0.1
         restart: unless-stopped
         container_name: skillboard-app
         environment:
             - "USER_AGENT=Skillz Development || David Davaham Tweetfleet: @DoubleD"
-            - REDIS_HOST=redis:54410
+            - REDIS_HOST=redis:6379
             - REDIS_PASS
-            - MYSQL_HOST=mysql:54420
+            - MYSQL_HOST=mysql
             - MYSQL_DB=skillz
             - MYSQL_USER=skillz
             - MYSQL_PASSWORD
@@ -21,6 +21,49 @@ services:
             - AUTH_KEY
             - AUTH_EXPIRY
             - ENVIRONMENT
+        command: /app/skillboard-api server
+    processor:
+        image: ghcr.io/eveisesi/skillboard/skillboard-api:0.0.1
+        restart: unless-stopped
+        container_name: skillboard-processor
+        environment:
+            - "USER_AGENT=Skillz Development || David Davaham Tweetfleet: @DoubleD"
+            - REDIS_HOST=redis:6379
+            - REDIS_PASS
+            - MYSQL_HOST=mysql
+            - MYSQL_DB=skillz
+            - MYSQL_USER=skillz
+            - MYSQL_PASSWORD
+            - LOG_LEVEL=info
+            - EVE_JWKS_URI=https://login.eveonline.com/oauth/jwks
+            - EVE_CLIENT_ID
+            - EVE_CLIENT_SECRET
+            - SERVER_PORT
+            - AUTH_KEY
+            - AUTH_EXPIRY
+            - ENVIRONMENT
+        command: /app/skillboard-api processor
+    cron:
+        image: ghcr.io/eveisesi/skillboard/skillboard-api:0.0.1
+        restart: unless-stopped
+        container_name: skillboard-cron
+        environment:
+            - "USER_AGENT=Skillz Development || David Davaham Tweetfleet: @DoubleD"
+            - REDIS_HOST=redis:6379
+            - REDIS_PASS
+            - MYSQL_HOST=mysql
+            - MYSQL_DB=skillz
+            - MYSQL_USER=skillz
+            - MYSQL_PASSWORD
+            - LOG_LEVEL=info
+            - EVE_JWKS_URI=https://login.eveonline.com/oauth/jwks
+            - EVE_CLIENT_ID
+            - EVE_CLIENT_SECRET
+            - SERVER_PORT
+            - AUTH_KEY
+            - AUTH_EXPIRY
+            - ENVIRONMENT
+        command: /app/skillboard-api cron
     redis:
         image: redis:6.2.5
         restart: unless-stopped
