--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
             - AUTH_EXPIRY
             - ENVIRONMENT
         command: /app/skillboard-api server
+        ports:
+           - "54400:54400"
     processor:
         image: ghcr.io/eveisesi/skillboard/skillboard-api:0.0.3
         restart: unless-stopped
