--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
             - AUTH_KEY
             - AUTH_EXPIRY
             - AUTH_TOKEN_DOMAIN
+            - AUTH_TOKEN_KID
             - ENVIRONMENT
         command: /app/skillboard-api server
         ports:
@@ -47,6 +48,7 @@ services:
             - AUTH_KEY
             - AUTH_EXPIRY
             - AUTH_TOKEN_DOMAIN
+            - AUTH_TOKEN_KID
             - ENVIRONMENT
         command: /app/skillboard-api processor
     cron:
@@ -68,8 +70,9 @@ services:
             - EVE_CALLBACK_URI
             - SERVER_PORT
             - AUTH_KEY
-            - AUTH_TOKEN_DOMAIN
             - AUTH_EXPIRY
+            - AUTH_TOKEN_DOMAIN
+            - AUTH_TOKEN_KID
             - ENVIRONMENT
         command: /app/skillboard-api cron
     redis:
