Progress thus far

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,80 +1,80 @@
 version: "3.7"
 
 services:
-    server:
-        image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
-        restart: unless-stopped
-        container_name: skillboard-server
-        environment:
-            - USER_AGENT
-            - REDIS_HOST
-            - REDIS_PASS
-            - MYSQL_HOST
-            - MYSQL_DATABASE
-            - MYSQL_USER
-            - MYSQL_PASSWORD
-            - LOG_LEVEL
-            - EVE_JWKS_URI
-            - EVE_CLIENT_ID
-            - EVE_CLIENT_SECRET
-            - EVE_CALLBACK_URI
-            - SERVER_PORT
-            - AUTH_KEY
-            - AUTH_EXPIRY
-            - AUTH_TOKEN_DOMAIN
-            - AUTH_TOKEN_KID
-            - ENVIRONMENT
-        command: /app/skillboard-api server
-        ports:
-           - "54400:54400"
-    processor:
-        image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
-        restart: unless-stopped
-        container_name: skillboard-processor
-        environment:
-            - USER_AGENT
-            - REDIS_HOST
-            - REDIS_PASS
-            - MYSQL_HOST
-            - MYSQL_DATABASE
-            - MYSQL_USER
-            - MYSQL_PASSWORD
-            - LOG_LEVEL
-            - EVE_JWKS_URI
-            - EVE_CLIENT_ID
-            - EVE_CLIENT_SECRET
-            - EVE_CALLBACK_URI
-            - SERVER_PORT
-            - AUTH_KEY
-            - AUTH_EXPIRY
-            - AUTH_TOKEN_DOMAIN
-            - AUTH_TOKEN_KID
-            - ENVIRONMENT
-        command: /app/skillboard-api processor
-    cron:
-        image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
-        restart: unless-stopped
-        container_name: skillboard-cron
-        environment:
-            - USER_AGENT
-            - REDIS_HOST
-            - REDIS_PASS
-            - MYSQL_HOST
-            - MYSQL_DATABASE
-            - MYSQL_USER
-            - MYSQL_PASSWORD
-            - LOG_LEVEL
-            - EVE_JWKS_URI
-            - EVE_CLIENT_ID
-            - EVE_CLIENT_SECRET
-            - EVE_CALLBACK_URI
-            - SERVER_PORT
-            - AUTH_KEY
-            - AUTH_EXPIRY
-            - AUTH_TOKEN_DOMAIN
-            - AUTH_TOKEN_KID
-            - ENVIRONMENT
-        command: /app/skillboard-api cron
+    # server:
+    #     image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
+    #     restart: unless-stopped
+    #     container_name: skillboard-server
+    #     environment:
+    #         - USER_AGENT
+    #         - REDIS_HOST
+    #         - REDIS_PASS
+    #         - MYSQL_HOST
+    #         - MYSQL_DATABASE
+    #         - MYSQL_USER
+    #         - MYSQL_PASSWORD
+    #         - LOG_LEVEL
+    #         - EVE_JWKS_URI
+    #         - EVE_CLIENT_ID
+    #         - EVE_CLIENT_SECRET
+    #         - EVE_CALLBACK_URI
+    #         - SERVER_PORT
+    #         - AUTH_KEY
+    #         - AUTH_EXPIRY
+    #         - AUTH_TOKEN_DOMAIN
+    #         - AUTH_TOKEN_KID
+    #         - ENVIRONMENT
+    #     command: /app/skillboard-api server
+    #     ports:
+    #        - "54400:54400"
+    # processor:
+    #     image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
+    #     restart: unless-stopped
+    #     container_name: skillboard-processor
+    #     environment:
+    #         - USER_AGENT
+    #         - REDIS_HOST
+    #         - REDIS_PASS
+    #         - MYSQL_HOST
+    #         - MYSQL_DATABASE
+    #         - MYSQL_USER
+    #         - MYSQL_PASSWORD
+    #         - LOG_LEVEL
+    #         - EVE_JWKS_URI
+    #         - EVE_CLIENT_ID
+    #         - EVE_CLIENT_SECRET
+    #         - EVE_CALLBACK_URI
+    #         - SERVER_PORT
+    #         - AUTH_KEY
+    #         - AUTH_EXPIRY
+    #         - AUTH_TOKEN_DOMAIN
+    #         - AUTH_TOKEN_KID
+    #         - ENVIRONMENT
+    #     command: /app/skillboard-api processor
+    # cron:
+    #     image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
+    #     restart: unless-stopped
+    #     container_name: skillboard-cron
+    #     environment:
+    #         - USER_AGENT
+    #         - REDIS_HOST
+    #         - REDIS_PASS
+    #         - MYSQL_HOST
+    #         - MYSQL_DATABASE
+    #         - MYSQL_USER
+    #         - MYSQL_PASSWORD
+    #         - LOG_LEVEL
+    #         - EVE_JWKS_URI
+    #         - EVE_CLIENT_ID
+    #         - EVE_CLIENT_SECRET
+    #         - EVE_CALLBACK_URI
+    #         - SERVER_PORT
+    #         - AUTH_KEY
+    #         - AUTH_EXPIRY
+    #         - AUTH_TOKEN_DOMAIN
+    #         - AUTH_TOKEN_KID
+    #         - ENVIRONMENT
+    #     command: /app/skillboard-api cron
     redis:
         image: redis:6.2.5
         restart: unless-stopped
