--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,13 @@ services:
         ports:
            - "54400:54400"
     processor:
-        image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
+        image: ${IMAGE_URI}
         restart: unless-stopped
         container_name: skillboard-processor
         env_file: .env
         command: /app/skillboard-api processor
     cron:
-        image: ghcr.io/eveisesi/skillboard/skillboard-api:latest
+        image: ${IMAGE_URI}
         restart: unless-stopped
         container_name: skillboard-cron
         env_file: .env
